--- a/debian/rules
+++ b/debian/rules
@@ -12,6 +12,9 @@
 # package maintainers to append LDFLAGS
 #export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 
+# FIXME: temporary kludge
+export PERL_VERSION = $(shell eval `perl -V:version`; echo $$version)
+
 clean:
 	dh_testdir
 	dh_auto_configure
@@ -22,13 +25,16 @@ clean:
 	dh $@  --with autotools_dev
 
 override_dh_auto_configure:
-	dh_auto_configure -- --disable-static \
-				--enable-oracle-at-runtime \
-				--enable-sap-at-runtime \
-				--enable-db2-at-runtime \
-				--enable-informix-at-runtime \
-				--with-default-runasuser=sqlrelay \
-				--with-default-runasgroup=sqlrelay
+	dh_auto_configure -- \
+		--disable-static \
+		--enable-oracle-at-runtime \
+		--enable-sap-at-runtime \
+		--enable-db2-at-runtime \
+		--enable-informix-at-runtime \
+		--with-perl-site-lib=/usr/share/perl/$(PERL_VERSION) \
+		--with-perl-site-arch=/usr/lib/$(DEB_HOST_MULTIARCH)/perl/$(PERL_VERSION) \
+		--with-default-runasuser=sqlrelay \
+		--with-default-runasgroup=sqlrelay
 
 # FIXME: temporary kludge
 override_dh_usrlocal:
