--- a/msvc/setupx64/setupx64.vdproj.in
+++ b/msvc/setupx64/setupx64.vdproj.in
@@ -1935,8 +1935,8 @@
             }
             "{1FB2D0AE-D3B9-43D4-B9DD-F88EC61E35DE}:_3D32617A395A460681D0D41809596DA8"
             {
-            "SourcePath" = "8:..\\..\\src\\triggers\\sqlrtrigger_deadlock_replay.dll"
-            "TargetName" = "8:sqlrtrigger_deadlock_replay.dll"
+            "SourcePath" = "8:..\\..\\src\\triggers\\sqlrtrigger_replay.dll"
+            "TargetName" = "8:sqlrtrigger_replay.dll"
             "Tag" = "8:"
             "Folder" = "8:_0CC0967169F54C2998A34CCA57F17B2E"
             "Condition" = "8:"
