fixed typo in clientinfolist documentation

--- a/doc/admin/parts/sqlrelay-routers-clientinfolist.conf
+++ b/doc/admin/parts/sqlrelay-routers-clientinfolist.conf
@@ -31,11 +31,11 @@
                 </users>
 		<routers>
 			<router module="clientinfolist" connectionid="master">
-				<client ip=".*oracle.*"/>
-				<client ip=".*orcl.*"/>
+				<clientinfo pattern=".*oracle.*"/>
+				<clientinfo pattern=".*orcl.*"/>
 			</router>
 			<router module="clientinfolist" connectionid="slave">
-				<client ip="*"/>
+				<clientinfo pattern="*"/>
 			</router>
 		</routers>
 		<connections>
