--- a/configure.in
+++ b/configure.in
@@ -1168,6 +1168,20 @@ sed -e "s|@bindir@|$bindir|g" init/sqlrelay.service.in | sed -e "s|@libdir@|$lib
 sed -e "s|@bindir@|$bindir|g" init/sqlrcachemanager.service.in | sed -e "s|@libdir@|$libdir|g" | sed -e "s|\${exec_prefix}|$exec_prefix|g" | sed -e "s|\${prefix}|$prefix|g" | sed -e "s|\${DESTDIR}||g" > init/sqlrcachemanager.service
 
 
+dnl Some versions of NetBSD create a libtool with -lgcc_s -lgcc in it, but don't
+dnl provide a shared libgcc.
+dnl Also, some versions of NetBSD create a libtool with -lgcc_s_pic in it, but
+dnl don't provide a shraed libgcc_s_pic.
+dnl These cause all kinds of link failures.  Fix them
+if ( test -r "libtool" )
+then
+	sed -e "s|-lgcc_s -lgcc|-lgcc_s|g" \
+		-e "s|-lgcc_s_pic|-lgcc_s|g" \
+		libtool > libtool.new
+	mv libtool.new libtool
+fi
+
+
 dnl Summary.
 echo
 echo "***** Summary ***********************************************"
