moved postgresql protocol module into main tree, improved it a bit

--- a/src/protocols/Makefile
+++ b/src/protocols/Makefile
@@ -12,6 +12,7 @@ include ../../config.mk
 
 all: $(SQLR)protocol_sqlrclient.$(LIBEXT) \
 	$(SQLR)protocol_mysql.$(LIBEXT) \
+	$(SQLR)protocol_postgresql.$(LIBEXT)
 
 clean:
 	$(LTCLEAN) $(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest *.ii
@@ -23,12 +24,16 @@ $(SQLR)protocol_sqlrclient.$(LIBEXT): sqlrclient.cpp sqlrclient.$(OBJ)
 $(SQLR)protocol_mysql.$(LIBEXT): mysql.cpp mysql.$(OBJ)
 	$(LTLINK) $(LINK) $(OUT)$@ mysql.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
 
+$(SQLR)protocol_postgresql.$(LIBEXT): postgresql.cpp postgresql.$(OBJ)
+	$(LTLINK) $(LINK) $(OUT)$@ postgresql.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
+
 install: $(INSTALLLIB)
 
 installdll:
 	$(MKINSTALLDIRS) $(libexecdir)
 	$(LTINSTALL) $(CP) $(SQLR)protocol_sqlrclient.$(LIBEXT) $(libexecdir)
 	$(LTINSTALL) $(CP) $(SQLR)protocol_mysql.$(LIBEXT) $(libexecdir)
+	$(LTINSTALL) $(CP) $(SQLR)protocol_postgresql.$(LIBEXT) $(libexecdir)
 
 installlib: $(INSTALLSHAREDLIB)
 
@@ -42,8 +47,13 @@ installsharedlib:
 	$(RM) $(libexecdir)/$(SQLR)protocol_mysql.a
 	$(RM) $(libexecdir)/$(SQLR)protocol_mysql.$(LIBEXT)
 	$(MODULERENAME) $(libexecdir)/$(SQLR)protocol_mysql.so so $(MODULESUFFIX)
+	$(LTINSTALL) $(CP) $(SQLR)protocol_postgresql.$(LIBEXT) $(libexecdir)
+	$(RM) $(libexecdir)/$(SQLR)protocol_postgresql.a
+	$(RM) $(libexecdir)/$(SQLR)protocol_postgresql.$(LIBEXT)
+	$(MODULERENAME) $(libexecdir)/$(SQLR)protocol_postgresql.so so $(MODULESUFFIX)
 
 uninstall:
 	$(RM) $(libexecdir)/$(SQLR)protocol_sqlrclient.* \
 		$(libexecdir)/sqlrprotocol_sqlrclient.* \
-		$(libexecdir)/sqlrprotocol_mysql.*
+		$(libexecdir)/sqlrprotocol_mysql.* \
+		$(libexecdir)/sqlrprotocol_postgresql.*
