--- a/test/jdbc/Makefile
+++ b/test/jdbc/Makefile
@@ -3,6 +3,7 @@ top_builddir = ../..
 include ../../config.mk
 
 all: oracle.class \
+	postgresqlbinds.class \
 	run.bat
 
 clean:
@@ -10,6 +11,9 @@ clean:
 
 oracle.class: oracle.java
 	$(JAVAC) -classpath $(javadir)/sqlrelay.jar oracle.java
+
+postgresqlbinds.class: postgresqlbinds.java
+	$(JAVAC) -classpath $(javadir)/sqlrelay.jar postgresqlbinds.java
 
 run.bat: run.batch
 	$(CP) run.batch run.bat
