added base tag modules

--- a/src/filters/Makefile
+++ b/src/filters/Makefile
@@ -13,6 +13,7 @@ include ../../config.mk
 all: $(SQLR)filter_regex.$(LIBEXT) \
 	$(SQLR)filter_string.$(LIBEXT) \
 	$(SQLR)filter_patterns.$(LIBEXT) \
+	$(SQLR)filter_tag.$(LIBEXT)
 
 clean:
 	$(LTCLEAN) $(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest *.ii
@@ -27,6 +28,9 @@ $(SQLR)filter_string.$(LIBEXT): string.cpp string.$(OBJ)
 $(SQLR)filter_patterns.$(LIBEXT): patterns.cpp patterns.$(OBJ)
 	$(LTLINK) $(LINK) $(OUT)$@ patterns.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
 
+$(SQLR)filter_tag.$(LIBEXT): tag.cpp tag.$(OBJ)
+	$(LTLINK) $(LINK) $(OUT)$@ tag.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
+
 install: $(INSTALLLIB)
 
 installdll:
@@ -34,6 +38,7 @@ installdll:
 	$(LTINSTALL) $(CP) $(SQLR)filter_regex.$(LIBEXT) $(libexecdir)
 	$(LTINSTALL) $(CP) $(SQLR)filter_string.$(LIBEXT) $(libexecdir)
 	$(LTINSTALL) $(CP) $(SQLR)filter_patterns.$(LIBEXT) $(libexecdir)
+	$(LTINSTALL) $(CP) $(SQLR)filter_tag.$(LIBEXT) $(libexecdir)
 
 installlib: $(INSTALLSHAREDLIB)
 
@@ -51,11 +56,16 @@ installsharedlib:
 	$(RM) $(libexecdir)/$(SQLR)filter_patterns.a
 	$(RM) $(libexecdir)/$(SQLR)filter_patterns.$(LIBEXT)
 	$(MODULERENAME) $(libexecdir)/$(SQLR)filter_patterns.so so $(MODULESUFFIX)
+	$(LTINSTALL) $(CP) $(SQLR)filter_tag.$(LIBEXT) $(libexecdir)
+	$(RM) $(libexecdir)/$(SQLR)filter_tag.a
+	$(RM) $(libexecdir)/$(SQLR)filter_tag.$(LIBEXT)
+	$(MODULERENAME) $(libexecdir)/$(SQLR)filter_tag.so so $(MODULESUFFIX)
 
 uninstall:
 	$(RM) $(libexecdir)/$(SQLR)filter_regex.* \
 		$(libexecdir)/$(SQLR)filter_string.* \
 		$(libexecdir)/$(SQLR)filter_patterns.* \
+		$(libexecdir)/$(SQLR)filter_tag.* \
 		$(libexecdir)/sqlrfilter_regex.* \
 		$(libexecdir)/sqlrfilter_string.* \
 		$(libexecdir)/sqlrfilter_patterns.*
