--- a/src/moduledatas/Makefile
+++ b/src/moduledatas/Makefile
@@ -10,30 +10,29 @@ include ../../config.mk
 .cpp.obj:
 	$(LTCOMPILE) $(CXX) $(CXXFLAGS) $(WERROR) $(PLUGINCPPFLAGS) $(COMPILE) $<
 
-all: $(SQLR)moduledata_test.$(LIBEXT)
+all: $(SQLR)moduledata_tag.$(LIBEXT)
 
 clean:
 	$(LTCLEAN) $(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest *.ii
 	$(RMTREE) .libs
 
-$(SQLR)moduledata_test.$(LIBEXT): test.cpp test.$(OBJ)
-	$(LTLINK) $(LINK) $(OUT)$@ test.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
+$(SQLR)moduledata_tag.$(LIBEXT): tag.cpp tag.$(OBJ)
+	$(LTLINK) $(LINK) $(OUT)$@ tag.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
 
 install: $(INSTALLLIB)
 
 installdll:
 	$(MKINSTALLDIRS) $(libexecdir)
-	$(LTINSTALL) $(CP) $(SQLR)moduledata_test.$(LIBEXT) $(libexecdir)
+	$(LTINSTALL) $(CP) $(SQLR)moduledata_tag.$(LIBEXT) $(libexecdir)
 
 installlib: $(INSTALLSHAREDLIB)
 
 installsharedlib:
 	$(MKINSTALLDIRS) $(libexecdir)
-	$(LTINSTALL) $(CP) $(SQLR)moduledata_test.$(LIBEXT) $(libexecdir)
-	$(RM) $(libexecdir)/$(SQLR)moduledata_test.a
-	$(RM) $(libexecdir)/$(SQLR)moduledata_test.$(LIBEXT)
-	$(MODULERENAME) $(libexecdir)/$(SQLR)moduledata_test.so so $(MODULESUFFIX)
+	$(LTINSTALL) $(CP) $(SQLR)moduledata_tag.$(LIBEXT) $(libexecdir)
+	$(RM) $(libexecdir)/$(SQLR)moduledata_tag.a
+	$(RM) $(libexecdir)/$(SQLR)moduledata_tag.$(LIBEXT)
+	$(MODULERENAME) $(libexecdir)/$(SQLR)moduledata_tag.so so $(MODULESUFFIX)
 
 uninstall:
-	$(RM) $(libexecdir)/$(SQLR)moduledata_test.* \
-		$(libexecdir)/sqlrmoduledata_test.*
+	$(RM) $(libexecdir)/$(SQLR)moduledata_tag.*
