tests exit with 0 now

--- a/test/tcl/freetds.tcl.in
+++ b/test/tcl/freetds.tcl.in
@@ -788,3 +788,5 @@ catch {checkSuccess [$cur sendQuery "create table testtable"] 0}
 catch {checkSuccess [$cur sendQuery "create table testtable"] 0}
 catch {checkSuccess [$cur sendQuery "create table testtable"] 0}
 puts ""
+
+exit 0
