--- a/test/tcl/db2.tcl.in
+++ b/test/tcl/db2.tcl.in
@@ -655,3 +655,5 @@ catch {checkSuccess [$cur sendQuery "create table testtable"] 0}
 catch {checkSuccess [$cur sendQuery "create table testtable"] 0}
 catch {checkSuccess [$cur sendQuery "create table testtable"] 0}
 puts ""
+
+exit 0
