--- a/test/tcl/firebird.tcl.in
+++ b/test/tcl/firebird.tcl.in
@@ -683,3 +683,5 @@ catch {checkSuccess [$cur sendQuery "create table testtable"] 0}
 catch {checkSuccess [$cur sendQuery "create table testtable"] 0}
 catch {checkSuccess [$cur sendQuery "create table testtable"] 0}
 puts ""
+
+exit 0
