--- a/test/tcl/krb.tcl.in
+++ b/test/tcl/krb.tcl.in
@@ -814,3 +814,5 @@ catch {checkSuccess [$cur sendQuery "create table testtable"] 0}
 catch {checkSuccess [$cur sendQuery "create table testtable"] 0}
 catch {checkSuccess [$cur sendQuery "create table testtable"] 0}
 puts ""
+
+exit 0
