--- a/test/tcl/postgresql.tcl.in
+++ b/test/tcl/postgresql.tcl.in
@@ -648,5 +648,4 @@ catch {checkSuccess [$cur sendQuery "create table testtable"] 0}
 catch {checkSuccess [$cur sendQuery "create table testtable"] 0}
 puts ""
 
-
-
+exit 0
