--- a/test/tcl/sap.tcl.in
+++ b/test/tcl/sap.tcl.in
@@ -781,5 +781,4 @@ catch {checkSuccess [$cur sendQuery "create table testtable"] 0}
 catch {checkSuccess [$cur sendQuery "create table testtable"] 0}
 puts ""
 
-
-
+exit 0
