--- a/test/tcl/sqlite.tcl.in
+++ b/test/tcl/sqlite.tcl.in
@@ -533,3 +533,5 @@ catch {checkSuccess [$cur sendQuery "create table testtable"] 0}
 catch {checkSuccess [$cur sendQuery "create table testtable"] 0}
 catch {checkSuccess [$cur sendQuery "create table testtable"] 0}
 puts ""
+
+exit 0
