--- a/test/tcl/tls.tcl.in
+++ b/test/tcl/tls.tcl.in
@@ -823,3 +823,5 @@ catch {checkSuccess [$cur sendQuery "create table testtable"] 0}
 catch {checkSuccess [$cur sendQuery "create table testtable"] 0}
 catch {checkSuccess [$cur sendQuery "create table testtable"] 0}
 puts ""
+
+exit 0
