--- a/config.h.in
+++ b/config.h.in
@@ -186,6 +186,9 @@
 /* Some versions of postgresql have PQconnectdb */
 #undef HAVE_POSTGRESQL_PQCONNECTDB
 
+/* Some versions of postgresql have PQdescribePrepared */
+#undef HAVE_POSTGRESQL_PQDESCRIBEPREPARED
+
 /* Some versions of postgresql have PQexecPrepared */
 #undef HAVE_POSTGRESQL_PQEXECPREPARED
 
