split sqlrelay-crash into its own module

--- a/src/directives/Makefile
+++ b/src/directives/Makefile
@@ -10,7 +10,8 @@ include ../../config.mk
 .cpp.obj:
 	$(LTCOMPILE) $(CXX) $(CXXFLAGS) $(WERROR) $(PLUGINCPPFLAGS) $(COMPILE) $<
 
-all: $(SQLR)directive_custom_wf.$(LIBEXT)
+all: $(SQLR)directive_custom_wf.$(LIBEXT) \
+	$(SQLR)directive_crash.$(LIBEXT)
 
 clean:
 	$(LTCLEAN) $(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest *.ii
@@ -19,11 +20,15 @@ clean:
 $(SQLR)directive_custom_wf.$(LIBEXT): custom_wf.cpp custom_wf.$(OBJ)
 	$(LTLINK) $(LINK) $(OUT)$@ custom_wf.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
 
+$(SQLR)directive_crash.$(LIBEXT): crash.cpp crash.$(OBJ)
+	$(LTLINK) $(LINK) $(OUT)$@ crash.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
+
 install: $(INSTALLLIB)
 
 installdll:
 	$(MKINSTALLDIRS) $(libexecdir)
 	$(LTINSTALL) $(CP) $(SQLR)directive_custom_wf.$(LIBEXT) $(libexecdir)
+	$(LTINSTALL) $(CP) $(SQLR)directive_crash.$(LIBEXT) $(libexecdir)
 
 installlib: $(INSTALLSHAREDLIB)
 
@@ -33,6 +38,11 @@ installsharedlib:
 	$(RM) $(libexecdir)/$(SQLR)directive_custom_wf.a
 	$(RM) $(libexecdir)/$(SQLR)directive_custom_wf.$(LIBEXT)
 	$(MODULERENAME) $(libexecdir)/$(SQLR)directive_custom_wf.so so $(MODULESUFFIX)
+	$(LTINSTALL) $(CP) $(SQLR)directive_crash.$(LIBEXT) $(libexecdir)
+	$(RM) $(libexecdir)/$(SQLR)directive_crash.a
+	$(RM) $(libexecdir)/$(SQLR)directive_crash.$(LIBEXT)
+	$(MODULERENAME) $(libexecdir)/$(SQLR)directive_crash.so so $(MODULESUFFIX)
 
 uninstall:
 	$(RM) $(libexecdir)/$(SQLR)directive_custom_wf.*
+	$(RM) $(libexecdir)/$(SQLR)directive_crash.*
