added pwdenc examples

--- a/doc/admin/parts/sqlrelay-pwdencs-rot13.conf
+++ b/doc/admin/parts/sqlrelay-pwdencs-rot13.conf
@@ -3,13 +3,13 @@
 
 	<instance ...>
 		<passwordencryptions>
-			<passwordencryption module="rot" id="rot13" count="13"/>
+			<passwordencryption module="rot" id="rot13enc" count="13"/>
 		</passwordencryptions>
 		<users>
-			<user user="sqlruser" password="fdyecnffjbeq" passwordencryptionid="rot13"/>
+			<user user="sqlruser" password="fdyecnffjbeq" passwordencryptionid="rot13enc"/>
 		</users>
 		<connections>
-			<connection connectionid="db" string="user=exampleuser;password=grfgcnffjbeq;..." passwordencryptionid="rot13" metric="6"/>
+			<connection connectionid="db" string="user=exampleuser;password=grfgcnffjbeq;..." passwordencryptionid="rot13enc"/>
 		</connections>
 	</instance>
 
