--- a/doc/admin/parts/sqlrelay-pwdencs-stacked.conf
+++ b/doc/admin/parts/sqlrelay-pwdencs-stacked.conf
@@ -3,14 +3,14 @@
 
 	<instance ...>
 		<passwordencryptions>
-			<passwordencryption module="rot" id="rot13" count="13"/>
-			<passwordencryption module="rot" id="rot10" count="10"/>
+			<passwordencryption module="rot" id="rot13enc" count="13"/>
+			<passwordencryption module="rot" id="rot10enc" count="10"/>
 		</passwordencryptions>
 		<users>
-			<user user="sqlruser" password="fdyecnffjbeq" passwordencryptionid="rot13"/>
+			<user user="sqlruser" password="fdyecnffjbeq" passwordencryptionid="rot13enc"/>
 		</users>
 		<connections>
-			<connection connectionid="db" string="user=exampleuser;password=ohkwzvozkccgybn;..." passwordencryptionid="rot10" metric="6"/>
+			<connection connectionid="db" string="user=exampleuser;password=ohkwzvozkccgybn;..." passwordencryptionid="rot10enc"/>
 		</connections>
 	</instance>
 
