--- a/test/testall.sh.in
+++ b/test/testall.sh.in
@@ -92,6 +92,7 @@ do
 
 	# make sure that the instance is up
 	PING=""
+	BYPASS="no"
 	for attempts in 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15
 	do
 		echo
@@ -122,46 +123,59 @@ do
 		then
 			sleep 5
 		else
+
+			# If ssl is sufficiently old then the ssl test will
+			# fail like this.  Just bypass the test in that case.
+			SSLPROBLEM=`echo "$PING" | grep "unknown message digest algorithm"`
+			if ( test -n "$SSLPROBLEM" )
+			then
+				BYPASS="yes"
+			fi
 			break
 		fi
 	done
 
-	# run the tests
-	if ( test "$PING" = "The database is up." )
+	# bypass the test if necessary
+	if ( test "$BYPASS" = "no" )
 	then
 
-		# kinit for krb tests
-		if ( test "$DB" = "krb" )
+		# run the tests
+		if ( test "$PING" = "The database is up." )
 		then
-			kdestroy
-			kinit
-		fi
 
-		echo
-		echo "success..."
-		echo
-
-		if ( test "$DB" = "mysqlprotocol" )
-		then
-			./dropin/mysql
-		else
-			./test.sh $DB
-		fi
-	else
-		echo
-		echo "failed to start ${DB}test"
-		echo
-		echo "hit enter to continue or ctrl-c to stop..."
-		if ( test "$DB" = "krb" )
-		then
-			read -t 20 PROMPT 2> /dev/null
-			# (ubuntu's dash doesn't support read -t)
-			if ( test "$?" != "0" )
+			# kinit for krb tests
+			if ( test "$DB" = "krb" )
 			then
-				sleep 20
+				kdestroy
+				kinit
+			fi
+
+			echo
+			echo "success..."
+			echo
+
+			if ( test "$DB" = "mysqlprotocol" )
+			then
+				./dropin/mysql
+			else
+				./test.sh $DB
 			fi
 		else
-			read PROMPT
+			echo
+			echo "failed to start ${DB}test"
+			echo
+			echo "hit enter to continue or ctrl-c to stop..."
+			if ( test "$DB" = "krb" )
+			then
+				read -t 20 PROMPT 2> /dev/null
+				# (ubuntu's dash doesn't support read -t)
+				if ( test "$?" != "0" )
+				then
+					sleep 20
+				fi
+			else
+				read PROMPT
+			fi
 		fi
 	fi
 
